; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_patch.c_apply_patch_content.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_patch.c_apply_patch_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATCH_UNKNOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"Found %s file in \22%s\22, attempting to patch ...\0A\00", align 1
@PATCH_SUCCESS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"%s %s: %s #%u\0A\00", align 1
@MSG_FAILED_TO_PATCH = common dso_local global i32 0, align 4
@MSG_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i8*, i8*, i32 (i32*, i32, i32*, i32, i32**, i32*)*, i8*, i32)* @apply_patch_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apply_patch_content(i32** %0, i32* %1, i8* %2, i8* %3, i32 (i32*, i32, i32*, i32, i32**, i32*)* %4, i8* %5, i32 %6) #0 {
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32 (i32*, i32, i32*, i32, i32**, i32*)*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  store i32** %0, i32*** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 (i32*, i32, i32*, i32, i32**, i32*)* %4, i32 (i32*, i32, i32*, i32, i32**, i32*)** %12, align 8
  store i8* %5, i8** %13, align 8
  store i32 %6, i32* %14, align 4
  %20 = load i32, i32* @PATCH_UNKNOWN, align 4
  store i32 %20, i32* %15, align 4
  %21 = load i32*, i32** %9, align 8
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %16, align 4
  %23 = load i32**, i32*** %8, align 8
  %24 = load i32*, i32** %23, align 8
  store i32* %24, i32** %17, align 8
  store i32 0, i32* %18, align 4
  store i32* null, i32** %19, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = load i8*, i8** %11, align 8
  %27 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i8* %25, i8* %26)
  %28 = load i32 (i32*, i32, i32*, i32, i32**, i32*)*, i32 (i32*, i32, i32*, i32, i32**, i32*)** %12, align 8
  %29 = load i8*, i8** %13, align 8
  %30 = bitcast i8* %29 to i32*
  %31 = load i32, i32* %14, align 4
  %32 = load i32*, i32** %17, align 8
  %33 = load i32, i32* %16, align 4
  %34 = call i32 %28(i32* %30, i32 %31, i32* %32, i32 %33, i32** %19, i32* %18)
  store i32 %34, i32* %15, align 4
  %35 = load i32, i32* %15, align 4
  %36 = load i32, i32* @PATCH_SUCCESS, align 4
  %37 = icmp eq i32 %35, %36
  br i1 %37, label %38, label %45

38:                                               ; preds = %7
  %39 = load i32*, i32** %17, align 8
  %40 = call i32 @free(i32* %39)
  %41 = load i32*, i32** %19, align 8
  %42 = load i32**, i32*** %8, align 8
  store i32* %41, i32** %42, align 8
  %43 = load i32, i32* %18, align 4
  %44 = load i32*, i32** %9, align 8
  store i32 %43, i32* %44, align 4
  br label %53

45:                                               ; preds = %7
  %46 = load i32, i32* @MSG_FAILED_TO_PATCH, align 4
  %47 = call i32 @msg_hash_to_str(i32 %46)
  %48 = load i8*, i8** %10, align 8
  %49 = load i32, i32* @MSG_ERROR, align 4
  %50 = call i32 @msg_hash_to_str(i32 %49)
  %51 = load i32, i32* %15, align 4
  %52 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %47, i8* %48, i32 %50, i32 %51)
  br label %53

53:                                               ; preds = %45, %38
  ret i32 1
}

declare dso_local i32 @RARCH_LOG(i8*, i8*, i8*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @RARCH_ERR(i8*, i32, i8*, i32, i32) #1

declare dso_local i32 @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
